--- a/css/Style.css
+++ b/css/Style.css
@@ -3,6 +3,29 @@ header{
     background-size: cover;
     background-position: center;
     min-height: 1000px;
+    
+}
+.hero-wrap {
+    width: 100%;
+    position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center; 
+    }
+
+.hero-wrap .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.3;
+    background: #000000; 
+    min-height: 1000px;
+}
+
+.second-nav{
+    top: -35px;
 }
 
 @media screen and (max-width: 670px){
@@ -15,4 +38,20 @@ header{
 .z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-small, .btn-floating, .dropdown-content, .collapsible, .sidenav {
     -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0), 0 0 0 0 rgba(0,0,0,0), 0 0 0 0 rgba(0,0,0,0); 
      box-shadow: 0 0 0 0 rgba(0,0,0,0), 0 0 0 0 rgba(0,0,0,0), 0 0 0 0 rgba(0,0,0,0); 
+}
+
+
+.logo{
+    width: 50px;
+    height: auto;
+    margin: 15px;
+    margin-left: 100px;
+}
+
+.header-font{
+    font-family: 'Times New Roman', Times, serif;
+    text-transform: uppercase;
+    font-size: 2rem !important;
+    margin-top: 10px;
+    z-index: 20;
 }
